[package]
name = "intuit"
version = "0.0.1"
authors = ["(viet) dương trọng việt <cestlaviet8438@gmail.com>"]
edition = "2021"
description = "A terminal UI (TUI) framework for developing full-fledged terminal apps!"
readme = "README.md"
repository = "https://github.com/cestlaviet8438/intuit/"
license = "MIT"
keywords = ["terminal", "tui", "ui-framework", "widgets"]

[dependencies]
anyhow = "1.0.95"
better-panic = "0.3.0"
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
derive-new = "0.7.0"
derive_builder = "0.20.2"
derive_more = "1.0.0"
directories = "5.0.1"
futures = "0.3.31"
human-panic = "2.0.2"
lazy_static = "1.5.0"
libc = "0.2.169"
ratatui = { version = "0.29.0", features = [
    "all-widgets",
    "macros",
    "unstable",
    "crossterm",
    "palette",
] }
ratatui-macros = "0.6.0"
serde = { version = "1.0.217", features = ["derive", "rc"] }
signal-hook = "0.3.17"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.13", "features" = ["full", "tracing"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
    "ansi",
    "env-filter",
    "fmt",
    "local-time",
    "time",
] }
